--- a/assets/style.css
+++ b/assets/style.css
@@ -20,7 +20,7 @@ h1 {
 }
 
 .item {
-  width: 200px;
+  width: 300px;
   border: 2px solid #333;
   padding: 1rem;
   border-radius: 12px;
@@ -35,5 +35,6 @@ h1 {
 
 .item img {
   width: 100%;
+  height: auto;
   border-radius: 8px;
 }
